fixed misalignmnt

--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ input[type="checkbox"]:hover                { accent-color: var(--color); }
 .card input[type="checkbox"]                { width: 1rem; height: 1rem; }
 input[type="number"], input[type="text"]    { background-color: transparent; color: #fff; border: none; outline: none; appearance: textfield; font-size: 1rem; border-bottom: solid .125rem var(--color); }
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button  { -webkit-appearance: none; margin: none; }
-#code_input  { border-radius: .35rem; text-align: left; background-color: #1d1d1d; margin: 2rem 0 2rem 2rem; padding: .5rem; height: 85vh; font: 1rem 'Fira Code'; grid-area: c; overflow: auto; word-break: break-all; color: transparent; caret-color: #fff; border: none; outline: none; }
+#code_input  { border-radius: .35rem; text-align: left; background-color: #1d1d1d; margin: 2rem 0 2rem 2rem; padding: .5rem; height: 84.5vh; font: 1rem 'Fira Code'; grid-area: c; overflow: auto; word-break: break-all; color: transparent; caret-color: #fff; border: none; outline: none; }
 #code_input::selection  { color: transparent; }
 #highlight   { font: 1rem 'Fira Code'; position: absolute; padding: .5rem; pointer-events: none; white-space: pre-wrap; tab-size: var(--tab-size); overflow: hidden; word-break: break-all; }
 #stdout      { border-radius: .35rem; text-align: left; background-color: #1d1d1d; margin: 0rem 2rem 2rem 0; padding: .5rem; height: calc(83vh - 150px - 2rem); font: 1rem 'Fira Code'; grid-area: o; overflow: auto; word-break: break-all; white-space: pre-wrap; tab-size: var(--tab-size); }
